# book-recommender

./: .gitignore  README.md  TEMPLATE_ENTREGA.md  buscador.py  chat.py  pyproject.toml
docs/: PLANO.md
